# quickshell

./: CMakeLists.txt  default.nix
src/wayland/: CMakeLists.txt
src/wayland/sway/: CMakeLists.txt  module.md
src/wayland/sway/ipc/: CMakeLists.txt  connection.cpp  connection.hpp  monitor.hpp  qml.cpp  qml.hpp  workspace.cpp  workspace.hpp
